:memo: add links
:sparkles: add tests and release action

Update dependency @types/react to v18.0.15

fix(ci): testing workflow and rename app

ci(github): remove test workflow

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "fb-seeder-app"
+name = "fb-seeder-tool"
 version = "0.1.0"
 description = "Effortless Facebook Seeding Tool"
 authors = ["Dung Huynh Duc"]
 license = "MIT"
-repository = "https://github.com/jellydn/fb-seeder-app"
-default-run = "fb-seeder-app"
+repository = "https://github.com/jellydn/fb-seeder-tool"
+default-run = "fb-seeder-tool"
 edition = "2021"
 rust-version = "1.57"
 
