--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "fb-seeder-app",
+  "name": "fb-seeder-tool",
   "version": "0.0.1",
   "private": true,
-  "type": "module",
   "scripts": {
     "build": "tsc && vite build",
     "dev": "vite",
     "prepare": "husky install",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "test": "NODE_OPTIONS='--loader tsx' wdio run wdio.conf.ts"
+  },
+  "lint-staged": {
+    "*.{js,tsx}": "eslint --cache --fix",
+    "*.{js,json,ts,tsx,css,md}": "prettier --write",
+    "package.json": "sort-package-json package.json"
   },
   "dependencies": {
     "@hookform/devtools": "4.1.1",
@@ -23,24 +28,33 @@
   "devDependencies": {
     "@tauri-apps/cli": "1.0.2",
     "@trivago/prettier-plugin-sort-imports": "3.2.0",
-    "@types/react": "18.0.14",
+    "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "5.30.5",
     "@typescript-eslint/parser": "5.30.5",
     "@vitejs/plugin-react": "1.3.2",
+    "@wdio/cli": "^7.20.5",
+    "@wdio/local-runner": "^7.20.5",
+    "@wdio/mocha-framework": "^7.20.3",
+    "@wdio/spec-reporter": "^7.20.3",
+    "@wdio/types": "^7.20.3",
     "autoprefixer": "10.4.7",
+    "chromedriver": "^103.0.0",
     "eslint": "8.19.0",
     "eslint-config-productsway": "0.1.15",
     "husky": "8.0.1",
     "lint-staged": "13.0.3",
     "postcss": "8.4.14",
     "prettier": "2.7.1",
+    "sort-package-json": "^1.57.0",
     "tailwindcss": "3.1.4",
+    "ts-node": "^10.8.2",
+    "tsconfig-paths": "^4.0.0",
+    "tsx": "^3.7.1",
     "typescript": "4.7.4",
-    "vite": "2.9.13"
-  },
-  "lint-staged": {
-    "*.{js,tsx}": "eslint --cache --fix",
-    "*.{js,json,ts,tsx,css,md}": "prettier --write"
+    "vite": "2.9.13",
+    "wdio-chromedriver-service": "^7.3.2",
+    "wdio-wait-for": "^2.2.6",
+    "webdriverio": "^7.20.5"
   }
 }
