--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "scripts": {
     "build": "tsc && vite build",
+    "coverage": "vitest run --coverage",
     "dev": "vite",
     "prepare": "husky install",
     "preview": "vite preview",
     "tauri": "tauri",
-    "test": "NODE_OPTIONS='--loader tsx' wdio run wdio.conf.ts"
+    "test": "vitest",
+    "test:e2e": "npx playwright test"
   },
   "lint-staged": {
     "*.{js,tsx}": "eslint --cache --fix",
@@ -26,6 +28,7 @@
     "verbum": "0.3.2"
   },
   "devDependencies": {
+    "@playwright/test": "^1.23.1",
     "@tauri-apps/cli": "1.0.2",
     "@trivago/prettier-plugin-sort-imports": "3.2.0",
     "@types/react": "18.0.15",
@@ -39,9 +42,11 @@
     "@wdio/spec-reporter": "^7.20.3",
     "@wdio/types": "^7.20.3",
     "autoprefixer": "10.4.7",
+    "c8": "^7.11.3",
     "chromedriver": "^103.0.0",
     "eslint": "8.19.0",
     "eslint-config-productsway": "0.1.15",
+    "happy-dom": "^6.0.2",
     "husky": "8.0.1",
     "lint-staged": "13.0.3",
     "postcss": "8.4.14",
@@ -53,6 +58,7 @@
     "tsx": "^3.7.1",
     "typescript": "4.7.4",
     "vite": "2.9.13",
+    "vitest": "^0.17.0",
     "wdio-chromedriver-service": "^7.3.2",
     "wdio-wait-for": "^2.2.6",
     "webdriverio": "^7.20.5"
