--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "prepare": "husky install",
     "preview": "vite preview",
     "tauri": "tauri",
-    "test": "vitest",
+    "test": "run-p -l dev test:e2e",
+    "test:unit": "vitest",
+    "test:report": "npx playwright show-report",
     "test:e2e": "npx playwright test"
   },
   "lint-staged": {
@@ -44,6 +46,7 @@
     "happy-dom": "6.0.2",
     "husky": "8.0.1",
     "lint-staged": "13.0.3",
+    "npm-run-all": "^4.1.5",
     "postcss": "8.4.14",
     "prettier": "2.7.1",
     "sort-package-json": "1.57.0",
