--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,6 +16,8 @@ tauri-build = { version = "1.0.3", features = [] }
 
 [dependencies]
 serde_json = "1.0"
+log = "0.4.0"
+env_logger = "0.8.4"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.0.3", features = ["api-all"] }
 reqwest = { version = "0.11", features = ["json"] }
