--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "tsc && vite build",
     "coverage": "vitest run --coverage",
     "dev": "vite",
+    "format": "prettier --write 'src/**/*.{ts,js,tsx}'",
     "prepare": "husky install",
     "preview": "vite preview",
     "tauri": "tauri",
@@ -15,14 +16,16 @@
     "test:e2e": "npx playwright test"
   },
   "dependencies": {
-    "@hookform/devtools": "4.1.1",
+    "@hookform/devtools": "4.2.0",
     "@tailwindcss/typography": "0.5.3",
     "@tauri-apps/api": "1.0.2",
     "daisyui": "2.19.0",
+    "pino": "8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-error-boundary": "3.1.4",
     "react-hook-form": "7.33.1",
-    "react-query": "3.39.1",
+    "react-query": "4.0.0-beta.23",
     "use-local-storage-state": "18.1.0",
     "verbum": "0.3.2"
   },
@@ -40,7 +43,7 @@
     "c8": "7.11.3",
     "eslint": "8.19.0",
     "eslint-config-productsway": "0.1.15",
-    "happy-dom": "6.0.2",
+    "happy-dom": "6.0.3",
     "husky": "8.0.1",
     "nano-staged": "0.8.0",
     "npm-run-all": "4.1.5",
