--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/typography": "0.5.3",
     "@tauri-apps/api": "1.0.2",
     "daisyui": "2.19.0",
+    "jotai": "1.7.4",
     "pino": "8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
