--- a/package.json
+++ b/package.json
@@ -18,30 +18,31 @@
   "dependencies": {
     "@hookform/devtools": "4.2.2",
     "@tailwindcss/typography": "0.5.4",
+    "@tanstack/react-query": "4.0.10",
+    "@tanstack/react-query-devtools": "^4.0.10",
     "@tauri-apps/api": "1.0.2",
-    "daisyui": "2.19.0",
-    "jotai": "1.7.5",
-    "pino": "8.1.0",
+    "daisyui": "2.19.1",
+    "jotai": "1.7.6",
+    "pino": "8.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "3.1.4",
     "react-hook-form": "7.33.1",
-    "react-query": "4.0.0-beta.23",
     "use-local-storage-state": "18.1.0",
     "verbum": "0.3.2"
   },
   "devDependencies": {
-    "@playwright/test": "1.23.4",
+    "@playwright/test": "1.24.0",
     "@tauri-apps/cli": "1.0.5",
     "@testing-library/react": "13.3.0",
-    "@trivago/prettier-plugin-sort-imports": "3.2.0",
+    "@trivago/prettier-plugin-sort-imports": "3.3.0",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
-    "@typescript-eslint/eslint-plugin": "5.30.6",
-    "@typescript-eslint/parser": "5.30.6",
+    "@typescript-eslint/eslint-plugin": "5.30.7",
+    "@typescript-eslint/parser": "5.30.7",
     "@vitejs/plugin-react": "2.0.0",
     "autoprefixer": "10.4.7",
-    "c8": "7.11.3",
+    "c8": "7.12.0",
     "eslint": "8.20.0",
     "eslint-config-productsway": "0.1.15",
     "happy-dom": "6.0.4",
@@ -54,7 +55,7 @@
     "tailwindcss": "3.1.6",
     "tsx": "3.8.0",
     "typescript": "4.7.4",
-    "vite": "3.0.0",
+    "vite": "3.0.2",
     "vitest": "0.18.1"
   },
   "nano-staged": {
