--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "dependencies": {
     "@hookform/devtools": "4.2.2",
+    "@mantine/core": "5.0.2",
+    "@mantine/hooks": "5.0.2",
+    "@mantine/rte": "5.0.2",
     "@tailwindcss/typography": "0.5.4",
     "@tanstack/react-query": "4.0.10",
     "@tanstack/react-query-devtools": "4.0.10",
