:green_heart: bump version :green_heart: fix bump version workflow :pencil2: typo on github action :green_heart: fix version ci :green_heart: get git version

--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -5,9 +5,11 @@ on:
   push:
     branches:
       - release
+      - main
+      - master
 
 jobs:
-  lint:
+  version:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
@@ -16,5 +18,11 @@ jobs:
           ref: ${{ github.head_ref }}   # checkout the correct branch name
           fetch-depth: 0                # fetch the whole repo history
 
-      - name: Git Version
-        uses: codacy/git-version@2.5.4
+      - name: Get version
+        id: get-version
+        uses: battila7/get-version-action@v2
+
+      - name: Simple Git Version
+        uses: jellydn/git-version@v2.5.5-1
+        with:
+          base-version: ${{ steps.get-version.outputs.version-without-v }}
