--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -9,6 +9,20 @@ on:
       - master
 
 jobs:
+  version-bump:
+    runs-on: ubuntu-latest
+    steps:
+      - name:  'Automated Version Bump'
+        uses:  'phips28/gh-action-bump-version@master'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          minor-wording:  'add,Adds,new'
+          major-wording:  'MAJOR,cut-major'
+          patch-wording:  'patch,fixes'     # Providing patch-wording will override commits
+                                            # defaulting to a patch bump.
+          rc-wording:     'RELEASE,alpha'
+
   version:
     runs-on: ubuntu-latest
     steps:
@@ -20,9 +34,9 @@ jobs:
 
       - name: Get version
         id: get-version
-        uses: battila7/get-version-action@v2
+        uses: martinbeentjes/npm-get-version-action@main
 
       - name: Simple Git Version
         uses: jellydn/git-version@v2.5.5-1
         with:
-          base-version: ${{ steps.get-version.outputs.version-without-v }}
+          base-version: ${{ steps.get-version.outputs.current-version }}
