--- a/package.json
+++ b/package.json
@@ -17,20 +17,21 @@
   },
   "dependencies": {
     "@hookform/devtools": "4.2.2",
-    "@mantine/core": "5.1.5",
-    "@mantine/hooks": "5.1.5",
-    "@mantine/rte": "5.1.5",
+    "@mantine/core": "5.1.6",
+    "@mantine/hooks": "5.1.6",
+    "@mantine/rte": "5.1.6",
     "@tailwindcss/typography": "0.5.4",
     "@tanstack/react-query": "4.1.3",
     "@tanstack/react-query-devtools": "4.0.10",
     "@tauri-apps/api": "1.0.2",
     "daisyui": "2.24.0",
     "jotai": "1.7.8",
+    "mitt": "^3.0.0",
     "pino": "8.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "3.1.4",
-    "react-hook-form": "7.34.1",
+    "react-hook-form": "7.34.2",
     "use-local-storage-state": "18.1.1",
     "verbum": "0.3.4"
   },
@@ -41,8 +42,8 @@
     "@trivago/prettier-plugin-sort-imports": "3.3.0",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
-    "@typescript-eslint/eslint-plugin": "5.33.0",
-    "@typescript-eslint/parser": "5.33.0",
+    "@typescript-eslint/eslint-plugin": "5.33.1",
+    "@typescript-eslint/parser": "5.33.1",
     "@vitejs/plugin-react": "2.0.1",
     "autoprefixer": "10.4.8",
     "c8": "7.12.0",
@@ -58,8 +59,8 @@
     "tailwindcss": "3.1.8",
     "tsx": "3.8.2",
     "typescript": "4.7.4",
-    "vite": "3.0.7",
-    "vitest": "0.21.1"
+    "vite": "3.0.8",
+    "vitest": "0.22.0"
   },
   "nano-staged": {
     "*.{js,tsx}": "eslint --cache --fix",
