--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@mantine/core": "5.3.0",
     "@mantine/hooks": "5.3.0",
     "@mantine/rte": "5.3.0",
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "@tailwindcss/typography": "0.5.7",
-    "@tanstack/react-query": "4.3.3",
-    "@tanstack/react-query-devtools": "4.3.3",
+    "@tanstack/query-async-storage-persister": "^4.3.4",
+    "@tanstack/react-query": "4.3.4",
+    "@tanstack/react-query-devtools": "4.3.5",
+    "@tanstack/react-query-persist-client": "^4.3.4",
     "@tauri-apps/api": "1.0.2",
     "daisyui": "2.27.0",
     "jotai": "1.8.3",
@@ -45,9 +48,9 @@
     "@typescript-eslint/eslint-plugin": "5.36.2",
     "@typescript-eslint/parser": "5.36.2",
     "@vitejs/plugin-react": "2.1.0",
-    "autoprefixer": "10.4.8",
+    "autoprefixer": "10.4.9",
     "c8": "7.12.0",
-    "eslint": "8.23.0",
+    "eslint": "8.23.1",
     "eslint-config-productsway": "0.1.16",
     "happy-dom": "6.0.4",
     "husky": "8.0.1",
