--- a/package.json
+++ b/package.json
@@ -17,38 +17,39 @@
   },
   "dependencies": {
     "@hookform/devtools": "4.2.2",
-    "@mantine/core": "5.3.3",
-    "@mantine/hooks": "5.3.3",
-    "@mantine/rte": "5.3.3",
+    "@mantine/core": "5.4.0",
+    "@mantine/hooks": "5.4.0",
+    "@mantine/rte": "5.4.0",
     "@react-native-async-storage/async-storage": "1.17.10",
     "@tailwindcss/typography": "0.5.7",
-    "@tanstack/query-async-storage-persister": "4.3.8",
-    "@tanstack/react-query": "4.3.8",
-    "@tanstack/react-query-devtools": "4.3.8",
-    "@tanstack/react-query-persist-client": "4.3.8",
+    "@tanstack/query-async-storage-persister": "4.3.9",
+    "@tanstack/react-query": "4.3.9",
+    "@tanstack/react-query-devtools": "4.3.9",
+    "@tanstack/react-query-persist-client": "4.3.9",
     "@tauri-apps/api": "1.1.0",
-    "daisyui": "2.28.0",
-    "jotai": "1.8.3",
+    "daisyui": "2.31.0",
+    "jotai": "1.8.4",
     "mitt": "3.0.0",
-    "pino": "8.5.0",
+    "p-forever": "^3.0.1",
+    "pino": "8.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "3.1.4",
-    "react-hook-form": "7.35.0",
+    "react-hook-form": "7.36.0",
     "use-local-storage-state": "18.1.1",
     "verbum": "0.3.5"
   },
   "devDependencies": {
-    "@playwright/test": "1.25.2",
+    "@playwright/test": "1.26.0",
     "@tauri-apps/cli": "1.1.1",
     "@testing-library/react": "13.4.0",
     "@trivago/prettier-plugin-sort-imports": "3.3.0",
-    "@types/react": "18.0.20",
+    "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
-    "@typescript-eslint/eslint-plugin": "5.37.0",
-    "@typescript-eslint/parser": "5.37.0",
+    "@typescript-eslint/eslint-plugin": "5.38.0",
+    "@typescript-eslint/parser": "5.38.0",
     "@vitejs/plugin-react": "2.1.0",
-    "autoprefixer": "10.4.11",
+    "autoprefixer": "10.4.12",
     "c8": "7.12.0",
     "eslint": "8.23.1",
     "eslint-config-productsway": "0.1.16",
@@ -62,7 +63,7 @@
     "tailwindcss": "3.1.8",
     "tsx": "3.9.0",
     "typescript": "4.8.3",
-    "vite": "3.1.2",
+    "vite": "3.1.3",
     "vitest": "0.23.4"
   },
   "nano-staged": {
