--- a/.prettierrc
+++ b/.prettierrc
@@ -9,6 +9,8 @@
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true,
   "plugins": [
+    "prettier-plugin-tailwindcss",
     "@trivago/prettier-plugin-sort-imports"
-  ]
+  ],
+  "tailwindConfig": "./tailwind.config.cjs"
 }
