--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "npm-run-all": "4.1.5",
     "postcss": "8.4.16",
     "prettier": "2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "sort-package-json": "1.57.0",
     "tailwindcss": "3.1.8",
     "tsx": "3.9.0",
