--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,6 +15,8 @@ rust-version = "1.57"
 tauri-build = { version = "1.1.1", features = [] }
 
 [dependencies]
+html2md = "0.2.13"
+tauri-egui = "0.1"
 serde_json = "1.0"
 log = "0.4.17"
 env_logger = "0.9.1"
