--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "postcss": "8.4.19",
     "prettier": "2.7.1",
     "prettier-plugin-tailwindcss": "0.1.13",
+    "rustywind": "^0.15.1",
     "sort-package-json": "2.1.0",
     "tailwindcss": "3.2.4",
     "tsx": "3.12.1",
@@ -66,6 +67,7 @@
   "nano-staged": {
     "*.{js,tsx}": "eslint --cache --fix",
     "*.{js,json,ts,tsx,css,md}": "prettier --write",
+    "*.{tsx}": "rustywind --write",
     "package.json": "sort-package-json package.json"
   }
 }
