--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@mantine/rte": "5.9.5",
     "@preact/signals-react": "1.2.1",
     "@tailwindcss/typography": "0.5.8",
-    "@tauri-apps/api": "1.2.0",
+    "@tauri-apps/api": "2.0.0-alpha.0",
     "daisyui": "2.46.0",
     "jotai": "1.12.0",
     "mitt": "3.0.0",
@@ -37,7 +37,7 @@
   },
   "devDependencies": {
     "@playwright/test": "1.29.1",
-    "@tauri-apps/cli": "1.2.2",
+    "@tauri-apps/cli": "2.0.0-alpha.1",
     "@testing-library/react": "13.4.0",
     "@trivago/prettier-plugin-sort-imports": "4.0.0",
     "@types/react": "18.0.26",
