--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -12,7 +12,7 @@ rust-version = "1.57"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "=1.1.1", features = [] }
+tauri-build = { version = "2.0.0-alpha.0", features = [] }
 
 [dependencies]
 html2text = "=0.4.3"
@@ -21,7 +21,7 @@ serde_json = "=1.0.87"
 log = "=0.4.17"
 env_logger = "=0.9.1"
 serde = { version = "=1.0.147", features = ["derive"] }
-tauri = { version = "=1.1.3", features = ["api-all"] }
+tauri = { version = "2.0.0-alpha.0", features = ["api-all"] }
 reqwest = { version = "=0.11.12", features = ["json"] }
 tokio = { version = "=1.21.2", features = ["full"] }
 
