--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "@hookform/devtools": "4.3.1",
     "@mantine/core": "5.9.5",
     "@mantine/hooks": "5.9.5",
-    "@mantine/rte": "5.9.5",
+    "@mantine/rte": "5.10.5",
     "@preact/signals-react": "1.3.6",
     "@tailwindcss/typography": "0.5.9",
-    "@tauri-apps/api": "2.0.0-alpha.5",
+    "@tauri-apps/api": "1.4.0",
     "daisyui": "3.5.1",
     "jotai": "2.3.1",
     "mitt": "3.0.1",
@@ -37,7 +37,7 @@
   },
   "devDependencies": {
     "@playwright/test": "1.37.0",
-    "@tauri-apps/cli": "2.0.0-alpha.10",
+    "@tauri-apps/cli": "1.4.0",
     "@testing-library/react": "14.0.0",
     "@trivago/prettier-plugin-sort-imports": "4.2.0",
     "@types/react": "18.2.20",
@@ -45,7 +45,7 @@
     "@typescript-eslint/eslint-plugin": "6.3.0",
     "@typescript-eslint/parser": "6.3.0",
     "@vitejs/plugin-react": "4.0.4",
-    "autoprefixer": "10.4.14",
+    "autoprefixer": "10.4.15",
     "c8": "8.0.1",
     "eslint": "8.47.0",
     "eslint-config-productsway": "1.2.0",
@@ -56,7 +56,7 @@
     "postcss": "8.4.27",
     "prettier": "3.0.1",
     "prettier-plugin-tailwindcss": "0.5.2",
-    "rustywind": "0.18.0",
+    "rustywind": "0.19.0",
     "sort-package-json": "2.5.1",
     "tailwindcss": "3.3.3",
     "tsx": "3.12.7",
